Optimize booking system: added deposit field, fixed invoice printing, and improved check-in logic